--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,7 +322,7 @@ input {
 /* SEP */
 
 #sep {
-    background: url(../img/ipad0.png) no-repeat center top;
+    background: url(../img/ipad0.jpg) no-repeat center top;
     padding-top: 60px;
     padding-bottom: 60px;
     text-align: center;
