--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -504,13 +504,23 @@ ul {
     width: 100%;
 }
 
-.gr {
+.gr-carrier {
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
     width: calc(33% - 10px);
+    float: left;
+    margin: 5px;
+    height: 300px;
+}
+
+.gr {
+    width: 100%;
     height: 200px;
     padding: 5px;
-    margin: 5px;
     line-height: 200px;
-    float: left;
+    background: #fff;
+    border-radius: 5px;
 }
 
 #header a {
@@ -520,7 +530,25 @@ ul {
 .gr img {
     max-height: 100%;
     max-width: 100%;
+    border-radius: 5px;
     height: auto !important;
+}
+
+.textorlogo {
+    background: #fafafa;
+    height: 100px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    font-size: 13px;
+    line-height: 17px;
+    color: #888;
+}
+
+.textorlogo img {
+    max-height: 45px;
+    display: block !important;
+    margin: auto;
 }
 
 #bigh {
