--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -545,6 +545,24 @@ ul {
     color: #888;
 }
 
+.iwanttoattend {
+    background: #27a6d6;
+    text-align: center;
+    color: #fff;
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    padding: 10px 25px;
+    border-radius: 40px;
+    height: 40px;
+    z-index: 999;
+    transition: 300ms all;
+}
+
+.iwanttoattend:hover {
+    background: #3d90af;
+}
+
 .textorlogo img {
     max-height: 45px;
     display: block !important;
@@ -696,6 +714,12 @@ ol.poolball-list {
         margin: 5px;
         line-height: 200px;
         float: left;
+    }
+    .iwanttoattend {
+        width: 100%;
+        border-radius: 0px;
+        bottom: 50px;
+        left: 0px;
     }
 }
 
