--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,12 +31,7 @@ body {
     color: #5a5a5a;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato TR', sans-serif;
     font-weight: 300;
 }
@@ -53,8 +48,7 @@ p {
     margin-top: 10px;
 }
 
-html,
-body {
+html, body {
     height: 100%;
 }
 
@@ -121,9 +115,7 @@ body {
     background: #2B2E31;
 }
 
-*,
-*:after,
-*:before {
+*, *:after, *:before {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -143,8 +135,7 @@ a {
     color: #1abc9c;
 }
 
-a:hover,
-a:focus {
+a:hover, a:focus {
     text-decoration: none;
     color: #696E74;
 }
@@ -500,6 +491,10 @@ ul {
     max-width: 700px;
 }
 
+.postContainer {
+    max-width: 900px;
+}
+
 #smallh {
     padding-top: 40px;
     padding-bottom: 40px;
@@ -521,6 +516,80 @@ ul {
     float: left;
     margin: 5px;
     height: 300px;
+}
+
+.gr-post {
+    background: #fff;
+    border: 1px solid #eee;
+    color: #555;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.gr-post-in {
+    background: #fff;
+    border: 1px solid #eee;
+    color: #555;
+    padding: 20px;
+}
+
+.gr-post .image {
+    max-height: 350px;
+    overflow: hidden;
+}
+
+.gr-post .image img {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.gr-post .title {
+    padding: 10px;
+    font-size: 23px;
+    font-weight: bold;
+}
+
+.gr-post .subtext {
+    padding: 10px;
+    font-size: 17px;
+    color: #999;
+    padding-bottom: 15px;
+}
+
+.gr-post .title {
+    padding: 10px;
+    font-size: 23px;
+    font-weight: bold;
+}
+
+.gr-post .subtext {
+    padding: 10px;
+    font-size: 17px;
+    color: #999;
+    padding-bottom: 15px;
+}
+
+.postContainer .content {
+    padding: 20px;
+    text-align: left;
+    margin: 0px 30px;
+}
+
+.content p {
+    padding-bottom: 5px;
+}
+
+.gr-post .button {
+    padding: 7px;
+    background: #27a6d6;
+    color: #fff;
+    width: 300px;
+    margin: auto;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    font-weight: bold;
+    margin-top: 10px;
 }
 
 .gr {
